# informatichats-rs

./: .gitignore  Cargo.toml
crates/informatichats-rs/: Cargo.toml
crates/informatichats-rs/src/: ffmpeg.rs  informatichat.rs  main.rs
